deployment/frontend-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-frontend
  namespace: default
  labels:
    app: example-frontend
spec:
  selector:
    matchLabels:
      app: example-frontend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: example-frontend
    spec:
      containers:
        - name: example-frontend
          image: marcotechstarter/example-frontend:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 10m
              memory: 50Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 80
              name: frontend-port
---
