deployment/backend-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: example-backend
  namespace: default
spec:
  selector:
    app: example-backend
  type: ClusterIP
  ports:
    - name: example-backend
      protocol: TCP
      port: 3000
      targetPort: 3000
---
