deployment/frontend-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: example-frontend
  namespace: default
spec:
  selector:
    app: example-frontend
  type: ClusterIP
  ports:
    - name: example-frontend
      protocol: TCP
      port: 80
      targetPort: 80
---
